syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "UpdateEnergyLimitContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

message UpdateEnergyLimitContract {
    bytes owner_address = 1;
    bytes contract_address = 2;
    int64 origin_energy_limit = 3;
}